<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:title="@string/preference_url_title"
        android:summary="@string/preference_url_summary"></Preference>
    <EditTextPreference
        android:key="@string/preference_key_user_name"
        android:title="@string/preference_user_name"
        android:summary="@string/preference_user_name_summary"></EditTextPreference>
    <EditTextPreference
        android:key="@string/preference_key_password"
        android:title="@string/preference_password"
        android:summary="@string/preference_password_summary"></EditTextPreference>
    <ListPreference
        android:key="@string/preference_key_main_bg_color"
        android:entries="@array/color_names"
        android:entryValues="@array/color_values"
        android:title="@string/preference_main_bg_color_title"
        android:summary="@string/preference_main_bg_color_summary"></ListPreference>
</PreferenceScreen>