<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_main_bg"
    android:id="@+id/main_page_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_title_text"
        android:textColor="@color/title_text_color"
        android:textSize="32sp"/>
    <RadioGroup
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="80dp"
        android:layout_gravity="center_horizontal">
        <RadioButton
            android:id="@+id/radio_category_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_text_picture"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_category_actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_text_actor"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_category_actress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_text_actress"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_category_editing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_text_editing"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_category_effects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_text_effects"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:paddingLeft="100dp"
        android:hint="@string/app_title_hint_nominee"
        android:background="@color/title_text_bg"
        android:id="@+id/text_box_nominee"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:paddingLeft="100dp"
        android:hint="@string/app_title_hint_review"
        android:background="@color/title_text_bg"
        android:id="@+id/text_box_review"/>

</LinearLayout>